2004-09-20  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotgnus.el:
	(bbdb/send-hook): use it

2004-09-19  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/planner-config.el:
	new function to reuse same window if possible

	* dotemacs.el:
	(read-file-name-completion-ignore-case): set to t
	longlines definitely sucks

	* dotemacs-cust.el:
	(custom-set-faces): unify latex faces with default ones

2004-09-16  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotgnus.el:
	more window configuration
	launch calendar and planner at startup
	more reftex stuff

	* dotemacs.el
	(planner-config): re-enabled

	* perso/emacs-wiki-config.el:
	update to latest sacahc's version

	* perso/planner-config.el:
	update to latest sacahc's version

	* perso/remember-config.el:
	initial checkin

2004-09-15  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotgnus.el:
	don't use newsrc
	(gnus-add-configuration): try this config

	* dotemacs.el:
	(make-main-frame): make the current frame the main one
	(chmod-file): remove useless function (see executable-chmod)

	* dotgnus.el:
	(server-start): start server automatically when using gnus

2004-09-14  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(kill-read-only-ok): don't beep when "killing" in read-only
	(tramp): use the correct package

2004-09-10  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(longlines): re-enabled with refill-mode

	* perso/patches.el:
	(scroll-preserve-screen-position): set to t

2004-09-09  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(multi-region-map): change keybinding (conflicted with usefull ones in LaTeX-mode)

2004-09-08  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(doxymacs): workaround doxymacs-font-lock bug
	(my-LaTeX-hook): longlines is annoying as is, fix it later
	use muse if available

	* dotemacs-cust.el:
	(font-lock-keys-face): fix default foreground

	* perso/xcscope.el:
	initial checkin

2004-09-07  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el: