@@ -69,7 +69,7 @@
  '(global-hl-line-hack-mode t nil (hl-line-hack))
  '(global-semantic-highlight-by-attribute-mode t nil (semantic-util-modes))
  '(global-semantic-highlight-edits-mode nil nil (semantic-util-modes))
- '(global-semantic-idle-scheduler-mode t nil (semantic-idle))
+ '(global-semantic-idle-scheduler-mode nil nil (semantic-idle))
  '(global-semantic-show-parser-state-mode t nil (semantic-util-modes))
  '(global-semantic-show-tag-boundaries-mode t nil (semantic-util-modes))
  '(global-semantic-show-unmatched-syntax-mode nil nil (semantic-util-modes))
@@ -100,7 +100,7 @@
  '(recentf-exclude (quote (":")))
  '(recentf-mode t nil (recentf))
  '(recentf-save-file "~/.emacs-recentf")
- '(reftex-plug-into-AUCTeX t)
+ '(reftex-plug-into-AUCTeX t t)
  '(save-place-limit 100)
  '(sawfish-extra-keyword-list (quote ("add-frame-style" "call-after-load" "call-after-property-changed" "call-after-state-changed" "custom-set-property" "define" "define-structure" "export" "open")))
  '(sawfish-warning-keyword-list (quote ("fixme" "FIXME" "Fixme" "fix me" "Fix me" "!!!" "Grrr" "Bummer" "todo" "TODO" "Todo")))
